Fixed invalid API for Java 8.